--- a/package.json
+++ b/package.json
@@ -6,22 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
     "mathjs": "^11.8.0",
     "vue": "^3.2.45",
+    "vue-router": "^4.2.4",
     "vuetify": "^3.1.7",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.41.0",
     "@mdi/font": "^7.1.96",
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.40.0",
     "eslint-plugin-vue": "^9.13.0",
     "sass": "^1.62.1",
     "vite": "^4.1.0",
-    "vite-plugin-windicss": "^1.8.10",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-windicss": "^1.9.1",
     "windicss": "^3.5.6"
   }
 }
