--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@antfu/eslint-config": "^0.41.0",
     "@mdi/font": "^7.1.96",
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.40.0",
     "eslint-plugin-vue": "^9.13.0",
+    "postcss": "^8.4.29",
     "sass": "^1.62.1",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.1.0",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-windicss": "^1.9.1",
-    "windicss": "^3.5.6"
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
